# pavepo_test

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  docker-compose.yaml  docker_compose.yaml  main.py  pyproject.toml
app/: deps.py  main.py  settings.py  tool.py  utils.py
app/routers/admin/: admin.py  services.py
app/routers/audio/: audio.py  models.py  schemas.py  services.py
app/routers/auth/: auth.py  models.py  schemas.py  services.py  type.py
app/routers/users/: schemas.py  services.py  users.py
