[project]
name = "pavepo-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.30.0",
    "authlib>=1.5.1",
    "fastapi[standard]>=0.115.12",
    "itsdangerous>=2.2.0",
    "pydantic-settings>=2.8.1",
    "sqlalchemy>=2.0.40",
    "starlette>=0.46.1",
]
