[project]
name = "pavepo-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=24.1.0",
    "asyncpg>=0.30.0",
    "authlib>=1.5.1",
    "bcrypt>=4.3.0",
    "fastapi[standard]>=0.115.12",
    "itsdangerous>=2.2.0",
    "pydantic-settings>=2.8.1",
    "python-jose[cryptography]>=3.4.0",
    "sqlalchemy>=2.0.40",
    "starlette>=0.46.1",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = [
    "ALL", # include all the rules, including new ones
]
ignore = [
    # ignore missing docs
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D106",
    "D107",
    "D200",
    "D205",
    "D212",
    "D400",
    "D401",
    "D415",

    # ruff rulls
    "RUF001",
    "RUF002",
    "RUF003",

    # exeptions
    "BLE001",
    "B904",

    # add __init__.py
    "INP001",
]
